aggregation report settings